@@ -17,37 +17,19 @@ import java.util.List;
 public class GalleryAssets {
     @OneToMany(mappedBy = "product", cascade = CascadeType.ALL)
     private List<ImageAsset> images;
+
     public GalleryAssets() {
         this.images = new ArrayList<>();
     }
 
-    public void AddAsset(Product product, String url){
-
-        ImageAsset imageAsset = new ImageAsset(product,url,null);
-        ImageAsset originalLastImage = null;
-        if(!images.isEmpty()){
-            originalLastImage = getLastImageAssetInGalleryAsset();
-        }
+    public void addAsset(Product product, String url){
+        ImageAsset imageAsset = new ImageAsset(product, url);
         this.images.add(imageAsset);
-        if(originalLastImage !=null){
-            originalLastImage.updateNextImage(imageAsset);
-        }
-
-    }
-
-    public void AddAsset(Product product, String url, ImageAsset nextAsset){
-        ImageAsset imageAsset = new ImageAsset(product,url,nextAsset);
-        images.add(imageAsset);
-    }
-
-    public void AddAsset(Product product , String url, String nextUrl){
-        ImageAsset nextImage = getImageAssetWithUrl(nextUrl);
-        AddAsset(product,url,nextImage);
-
+        System.out.println("New ImageAsset created: " + imageAsset);
     }
 
 
-    public void RemoveAsset(Long id){
+    public void removeAsset(Long id){
         ImageAsset imageToRemove = null;
         for (ImageAsset image : images) {
             if (image.getId().equals(id)) {
@@ -61,40 +43,32 @@ public class GalleryAssets {
     }
 
     public Long getFirstImageIdInGalleryAssets(){
-        return images.getFirst().getId();
+        return images.isEmpty() ? null : images.get(0).getId();
     }
 
     private ImageAsset getImageAssetWithId(Long imageId){
-        return images.stream().filter(image ->image.getId().equals(imageId))
-                .findFirst().orElse(null);
+        return images.stream()
+                .filter(image -> image.getId().equals(imageId))
+                .findFirst()
+                .orElse(null);
     }
 
     public ImageAsset getImageAssetWithUrl(String url){
-        return images.stream().filter(image ->image.getUrl().equals(url))
-                .findFirst().orElse(null);
+        return images.stream()
+                .filter(image -> image.getUrl().equals(url))
+                .findFirst()
+                .orElse(null);
     }
 
-    public Long getNextImageInGalleryAssets(Long currentImageId){
-        ImageAsset asset = getImageAssetWithId(currentImageId);
-        return asset != null ? asset.getId():null;
 
-    }
 
     public ImageAsset getLastImageAssetInGalleryAsset(){
-        return images.stream().filter(image -> image.getNextImage() == null)
-                .findFirst().orElse(null);
+        return images.isEmpty() ? null : images.get(images.size() - 1);
     }
 
-    public boolean isLastImageInGallery(Long currentImageId){
-        return getNextImageInGalleryAssets(currentImageId) == null;
-    }
+
 
     public boolean isEmpty(){
         return images.isEmpty();
     }
-
-
-
-
-
 }
